--- a/tidyup-frontend/package.json
+++ b/tidyup-frontend/package.json
@@ -15,16 +15,17 @@
     "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.3.7",
     "@tanstack/react-query": "^5.90.16",
+    "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.70.0",
+    "react-hook-form": "^7.71.0",
     "react-router-dom": "^7.12.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.4",
-    "@types/react": "^19.2.7",
+    "@types/node": "^24.10.7",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.2",
